[gd_scene load_steps=5 format=3 uid="uid://ccro68gqsyoaa"]

[ext_resource type="Script" path="res://Scripts/Destination/crewmateDestinationNameplate.gd" id="1_2pf27"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pukoa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k16j6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pyh0m"]

[node name="PanelContainer" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxTexture_pukoa")
script = ExtResource("1_2pf27")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="crewmateIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
expand_mode = 3
stretch_mode = 4

[node name="crewmateHP" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxTexture_k16j6")
theme_override_styles/fill = SubResource("StyleBoxTexture_pyh0m")
value = 50.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
